--- a/config/vim/plugins/completion.toml
+++ b/config/vim/plugins/completion.toml
@@ -7,10 +7,10 @@ hook_source = '''
   let g:deoplete#auto_complete_delay = 0
   let g:deoplete#auto_complete_start_length = 1
   let g:deoplete#enable_smart_case = 1
-  inoremap <silent><expr> <TAB>
+  inoremap <expr><TAB>
       \ pumvisible() ? "\<C-n>" :
-      \ <SID>check_back_space() ? "\<TAB>" :
-      \ deoplete#manual_complete()
+      \ neosnippet#expandable_or_jumpable() ? "\<Plug>(neosnippet_expand_or_jump)" :
+      \ "\<tab>"
   inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<C-h>"
   inoremap <expr><BS> deoplete#smart_close_popup()."\<C-h>"
   inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
