--- a/config/vim/plugins/completion.toml
+++ b/config/vim/plugins/completion.toml
@@ -55,7 +55,7 @@ hook_source = '''
 '''
 
 [[plugins]]
-repo = 'Shougo/deoplete-rct'
+repo = 'uplus/deoplete-solargraph'
 on_i = 1
 on_ft = 'ruby'
 depends = 'deoplete.nvim'
