--- a/config/vim/plugins/completion.toml
+++ b/config/vim/plugins/completion.toml
@@ -23,10 +23,10 @@ repo = 'Shougo/neosnippet'
 on_i  = 1
 on_ft = 'snippet'
 depends = ['neosnippet-snippets']
-hook_source = '''
-  imap <C-k> <Plug>(neosnippet_expand_or_jump)
-  smap <C-k> <Plug>(neosnippet_expand_or_jump)
-  xmap <C-k> <Plug>(neosnippet_expand_target)
+hook_add = '''
+  imap <C-j> <Plug>(neosnippet_expand_or_jump)
+  smap <C-j> <Plug>(neosnippet_expand_or_jump)
+  xmap <C-j> <Plug>(neosnippet_expand_target)
   if has('conceal')
     set conceallevel=2 concealcursor=niv
   endif
