--- a/.mackerel-app-activity.json
+++ b/.mackerel-app-activity.json
@@ -4,22 +4,43 @@
   "MetricPrefix": "work.",
   "NameMapping": {
     "slackmacgap": "Slack",
-    "HyperSwitch": "",
-    "Java-Updater": "",
+    "onepassword-osx": "1Password",
+    "onepassword-osx-helper": "1Password",
     "alacritty": "Terminal",
     "iterm2": "Terminal",
+    "kitty": "Terminal",
+    "console": "Terminal",
+    "Chrome": "Browser",
+    "Safari": "Browser",
+    "firefox": "Browser",
+    "medis": "Tools",
+    "SequelPro": "Tools",
+    "transmission": "Tools",
     "finder": "Finder",
     "trello": "Trello",
     "inkdrop": "Inkdrop",
     "dashdoc": "Dash",
-    "firefox": "FireFox",
-    "kitty": "Terminal",
-    "onepassword-osx": "1Password",
-    "onepassword-osx-helper": "1Password",
+    "studio": "AndroidStudio",
+    "HyperSwitch": "",
+    "XLD": "Media",
+    "MPlayerX": "Media",
+    "Java-Updater": "",
     "loginwindow": "",
     "mac": "",
     "systempreferences": "",
-    "cmd": ""
+    "cmd": "",
+    "ActivityMonitor": "",
+    "Hammerspoon": "",
+    "UserNotificationCenter": "",
+    "electron": "",
+    "Alfred-Preferences-3": "",
+    "JavaUpdater": "",
+    "Preview": "",
+    "SystemProfiler": "",
+    "_none_": "",
+    "appstore": "",
+    "musicmanager": "",
+    "systemuiserver": ""
   },
   "PostIntervalMinutes": 1
 }
