--- a/config/vim/plugins/utility.toml
+++ b/config/vim/plugins/utility.toml
@@ -51,6 +51,6 @@ hook_source = '''
 [[plugins]]
 repo = 'haya14busa/vim-edgemotion'
 hook_add = '''
-  map <C-j> <Plug>(edgemotion-j)
-  map <C-k> <Plug>(edgemotion-k)
+  map <Down> <Plug>(edgemotion-j)
+  map <Up> <Plug>(edgemotion-k)
 '''
