--- a/ansible/roles/go/vars/main.yml
+++ b/ansible/roles/go/vars/main.yml
@@ -12,3 +12,9 @@ go_packages:
   - name: gometalinter
     uri: github.com/alecthomas/gometalinter
     command: gometalinter --install --update
+  - name: gore
+    uri: github.com/motemen/gore
+  - name: gocode
+    uri: github.com/k0kubun/pp
+  - name: godoc
+    uri: golang.org/x/tools/cmd/godoc
