--- a/config/vim/plugins/colorscheme.toml
+++ b/config/vim/plugins/colorscheme.toml
@@ -4,8 +4,5 @@ hook_add = '''
   set background=dark
   let g:solarized_termtrans = 1
   syntax on
-  augroup ColorScheme
-    autocmd!
-    au ColorScheme VimEnter * nested colorscheme solarized
-  augroup END
+  colorscheme solarized
 '''
