--- a/config/vim/plugins/utility.toml
+++ b/config/vim/plugins/utility.toml
@@ -8,8 +8,8 @@ let g:clever_f_use_migemo = 1
 [[plugins]]
 repo = 'soramugi/auto-ctags.vim'
 hook_add = '''
-  let g:auto_ctags = 1
-  let g:auto_ctags_directory_list = ['tmp']
+  let g:auto_ctags = 0
+  let g:auto_ctags_directory_list = ['.git']
   let g:auto_ctags_filetype_mode = 1
 '''
 
