--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .DS_Store
+ansible/*.retry
+config/hub
 config/zsh/.zshenv.secure
 config/zsh/.zshrc.local
 config/zsh/.zshrc.zwc
@@ -9,6 +11,7 @@ config/fontforge
 config/fish/functions
 config/fish/completions
 config/fisherman
+config/fisher
 config/fish/conf.d
 config/fish/fishd.*
 config/yarn
