--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -15,6 +15,7 @@ set -g @tpm_plugins '                  \
   raba-jp/tmux-volume-for-mac          \
   raba-jp/tmux-wifi-for-mac            \
   raba-jp/tmux-extend-control          \
+  raba-jp/tmux-kubernetes              \
 '
 
 ##### Plugins Configuration #####
@@ -35,7 +36,7 @@ bind-key -T prefix R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 set-option -g status-position top
 set-option -g status-left-length 120
 set-option -g status-right-length 120
-set-option -g status-left '#{git_user} #{prefix_highlight}'
+set-option -g status-left '#{git_user} #{kube_context} #{prefix_highlight}'
 set-option -g status-right '[#{wifi_ssid_mac} | #{wifi_rate_mac}] [CPU:#{cpu_percentage} Battery:#{battery_percentage}]'
 set-option -g monitor-activity on
 set-option -g visual-activity on
