--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -35,11 +35,16 @@ jobs:
         run: |
           wget -O mitamae https://github.com/itamae-kitchen/mitamae/releases/download/v1.9.0/mitamae-x86_64-linux
           chmod +x ./mitamae
+      - name: debug log
+        run: echo $PATH
+        env:
+          GOPATH: $HOME/dev
+          PATH: $PATH:$GOPATH
       - name: Run MItamae
         run: sudo ./mitamae local cookbooks/go/default.rb
         env:
-          - GOPATH: $HOME/dev
-          - PATH: $PATH:$GOPATH
+          GOPATH: $HOME/dev
+          PATH: $PATH:$GOPATH
       - name: Install serverspec
         run: |
           sudo apt-get install ruby
@@ -47,8 +52,8 @@ jobs:
       - name: Run Serverspec
         run: rake spec:go
         env:
-          - GOPATH: $HOME/dev
-          - PATH: $PATH:$GOPATH
+          GOPATH: $HOME/dev
+          PATH: $PATH:$GOPATH
   python:
     runs-on: ubuntu-latest
     steps:
