--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -39,6 +39,8 @@ jobs:
         run: sudo ./mitamae local cookbooks/go/default.rb
         env:
           GOPATH: /home/runner/dev
+      - name: debug
+        run: ls -al /home/runner/dev/bin
       - name: Install serverspec
         run: |
           sudo apt-get install ruby
