--- a/main.yml
+++ b/main.yml
@@ -7,44 +7,24 @@
 
   roles:
     - role: mac
-      tags:
-        - mac
-        - os
+      tags: [mac, os]
       when: ansible_os_family == 'Darwin'
     - role: ubuntu
-      tags:
-        - ubuntu
-        - os
+      tags: [ubuntu, os]
       when: ansible_os_family == 'Debian'
     - role: commons
-      tags:
-        - commons
+      tags: [commons]
     - role: ruby
-      tags:
-        - ruby
-        - language
+      tags: [ruby, language]
     - role: go
-      tags:
-        - go
-        - language
+      tags: [go, language]
     - role: python
-      tags:
-        - python
-        - language
+      tags: [python, language]
     - role: rust
-      tags:
-        - rust
-        - language
+      tags: [rust, language]
     - role: node
-      tags:
-        - node
-        - language
+      tags: [node, language]
     - role: fish
-      tags:
-        - fish
-    - role: zsh
-      tags:
-        - zsh
+      tags: [fish]
     - role: vscode
-      tags:
-        - vscode
+      tags: [vscode]
