--- a/roles/vscode/tasks/darwin.yml
+++ b/roles/vscode/tasks/darwin.yml
@@ -8,5 +8,14 @@
     name: visual-studio-code
     state: latest
 
-- import_tasks: file.yml
-  with_items: "{{ darwin_vscode_config_files }}"
+- name: Create symlinks
+  include_tasks: file.yml
+  with_items:
+    - src: "{{ xdg_data_home }}/dotfiles/config/Code/User/settings.json"
+      dest: "{{ ansible_user_dir }}/Library/Application\ Support/Code/User/settings.json"
+    - src: "{{ xdg_data_home }}/dotfiles/config/Code/User/keybindings.json"
+      dest: "{{ ansible_user_dir }}/Library/Application\ Support/Code/User/keybindings.json"
+    - src: "{{ xdg_data_home }}/dotfiles/config/Code/User/locale.json"
+      dest: "{{ ansible_user_dir }}/Library/Application\ Support/Code/User/locale.json"
+    - src: "{{ xdg_data_home }}/dotfiles/config/Code/User/projects.json"
+      dest: "{{ ansible_user_dir }}/Library/Application\ Support/Code/User/projects.json"
