--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -7,5 +7,5 @@
   import_tasks: ubuntu.yml
   when: ansible_os_family == "Debian"
 
-- import_tasks: extension.yml
+- include_tasks: extension.yml
   with_items: "{{ vscode_extensions }}"
