Fix GitHub Actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,8 @@ jobs:
         os: [ubuntu-18.04, macOS-10.14]
     steps:
       - uses: actions/checkout@v1
-      - name: Run MItamae
-        run: ./run.sh cookbooks/rust/default.rb
+      - name: Provisioning
+        run: ./setup.sh rust
       - name: Install serverspec
         run: ./setup_test.sh
       - name: Run Serverspec
