--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -10,8 +10,8 @@ jobs:
         os: [ubuntu-18.04, macOS-10.14]
     steps:
       - uses: actions/checkout@v1
-      - name: Run MItamae
-        run: ./run.sh cookbooks/ruby/default.rb
+      - name: Provisioning
+        run: ./setup.sh ruby
       - name: Install serverspec
         run: ./setup_test.sh
       - name: Run Serverspec
